[package]
name = "rorex"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = { version = "0.27.2" }
egui = { version = "0.27.2" }
egui_plot = { version = "0.27.2" }
chrono = "0.4"